src/components/Hero/Hero.module.scss
.hero {
  position: relative;
  min-height: 100vh;
  align-content: center;

  @media screen and (min-width: 780px) {
    align-content: stretch;
  }

  .heroTitles {
    flex: 1;
    grid-column: span 2;
    display: flex;
    flex-direction: column;
    align-self: center;
    align-items: center;
    justify-content: center;

    @media screen and (min-width: 780px) {
      grid-column: 2 / 4;
    }

    .title {
      font-size: 10rem;
      font-family: var(--font-thunder);
      font-weight: 800;
      opacity: 0;

      @media screen and (min-width: 780px) {
        font-weight: 900;
      }
    }

    .subtitle {
      font-size: 3rem;
      font-weight: 300;
      font-family: var(--font-dirtyline);
      transform: translateX(15%);
      opacity: 0;
    }

    .title, .subtitle {
      text-transform: uppercase;
      color: var(--title-color);
      transition: color .3s ease-in-out;
    }

    .bottom {
      display: flex;
      justify-content: space-between;
      align-items: center;
      transform: translateY(-40%);

      .circleContainer {
        display: flex;
        gap: 0.5rem;
      }
    }
  }

  .heroOverview {
    flex: 1;
    grid-column: 2 / 3;
    margin-top: 9rem;
    width: 80%;
    font-family: var(--font-thunder);
    font-weight: 100;
    letter-spacing: 1.5px;
    transition: color .3s ease-in;

    @media screen and (min-width: 780px) {
      grid-column: 4 / 5;
      margin: auto 0 50% 0;
      width: 50%;
    }
  }
}

